--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -3,38 +3,203 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <title>{% block title %}Foreacast{% endblock %}</title>
+    <!--[if lte IE 8]>
+            <script src="{% static 'js/excanvas.js' %}"></script>
+        <![endif]-->
+    <link rel="shortcut icon" href="{% static 'main/images/fav.ico' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'main/css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'main/css/font-awesome.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'main/css/highcharts.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'main/css/custom.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'main/pnotify/pnotify.custom.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'main/css/bootstrap-chosen.css' %}">
+    <script type="text/javascript" src="{% static 'js/Chart.min.js' %}"></script>
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'main/font-awesome/4.5.0/css/font-awesome.min.css' %}"/>
+    {% block head %}
 
-
-
-
+    {% endblock %}
 
 </head>
 <body>
+<div id="navbar" class="navbar navbar-default    navbar-collapse  h-navbar ace-save-state"
+     style="background:#417690">
+    <div class="navbar-container ace-save-state" id="navbar-container">
+        <div class="navbar-header pull-left">
+            <a href="#" class="navbar-brand">
+                <small style="color: #fff;">
+                    <i class="fa fa-leaf lg"></i>
+                    ForeCas-S
+                </small>
+            </a>
 
-{% block body %}
+
+        </div>
+
+        <div class="navbar-buttons navbar-header pull-right  " role="navigation">
+            <ul class="nav ace-nav" style="">
+                <li class="light-blue dropdown-modal user-min">
+                    <a data-toggle="dropdown" href="#" class="dropdown-toggle">
+                        <img class="nav-user-photo" src="{% static 'main/images/user.jpg' %}" alt="User's  Photo">
+                        <span class="user-info">
+                                                                <small></small>
+                                                                                                                        </span>
+                        <i class="ace-icon fa fa-caret-down" style="color: #fff;"></i>
+                    </a>
+
+                    <ul class="user-menu dropdown-menu-right dropdown-menu dropdown-yellow dropdown-caret dropdown-close">
+                        {% if request.user.is_authenticated %}
+                            <li>
+                                <a href="#">
+                                    <i class="fa fa-user"></i>
+                                    Welcome Admin
+                                </a>
+                            </li>
+                            <li class="divider"></li>
+                            <li>
+                                <a href="{% url 'password_change' %}">
+                                    <i class="fa fa-cog"></i>
+                                    Change Password
+                                </a>
+                            </li>
+
+                            <li class="divider"></li>
+
+                            <li>
+                                <a href="{% url 'logout' %}" target="_self">
+                                    <i class=" fa fa-power-off"></i>
+                                    Logout
+                                </a>
+                            </li>
+                        {% else %}
+                            <li>
+                                <a href="{% url 'login' %}">
+                                    <i class=" glyphicon glyphicon-arrow-down"></i>
+                                    Login
+                                </a>
+                            </li>
+
+                            <li class="divider"></li>
+
+                            <li>
+                                <a href="{% url 'register' %}" target="_self">
+                                    <i class="   glyphicon glyphicon-user"></i>
+                                    Signup
+                                </a>
+                            </li>
+                        {% endif %}
+
+                    </ul>
+                </li>
+            </ul>
+        </div>
+
+
+    </div><!-- /.navbar-container -->
+</div>
 {% if messages %}
     <div class="container-fluid mt-3">
         {% include 'bootstrap3/messages.html' %}
     </div>
 {% endif %}
+<nav class="navbar visible-xs">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand web-name" href="/">ForeCast</a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="/"><span class="glyphicon glyphicon-dashboard"></span>&nbsp;&nbsp;Dashboard</a>
+                </li>
+                <li><a href="/production"><span class="glyphicon glyphicon-stats"></span>
+                    Production Stats</a></li>
+                <li><a href="/farmer"><span class="glyphicon glyphicon-grain"></span> Farmer
+                    Dashboard</a></li>
+                <li><a href="/advisory"><span class="glyphicon glyphicon-signal"></span> Advisory
+                    Panel</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
-{% endblock %}
+<div class="container-fluid" id="main-body">
+
+    <div class="row content main-row">
+        <div class="col-sm-2  sidenav hidden-xs" id="menu">
+            <div class="row">
+                <div class="col-sm-12 navigation">
+                    <h2 class="web-name">ForeCast</h2>
+                    <ul class="nav nav-pills nav-stacked">
+                        <li class="active" id="active"><a href="/"><span
+                                class="glyphicon glyphicon-dashboard"></span>Dashboard</a>
+                        </li>
+                        <li><a href="/production"><span class="glyphicon glyphicon-stats"></span>
+                            Production Statistics</a></li>
+                        <li><a href="/farmer"><span class="glyphicon glyphicon-grain"></span>
+                            Farmer
+                            Dashboard</a></li>
+                        <li><a href="/advisory"><span class="glyphicon glyphicon-signal"></span>
+                            Advisory
+                            Panel</a></li>
+                    </ul>
+                    <br>
+                </div>
+
+                <div class="col-sm-12 weather-starts">
+                    <div class="col-sm-12" style="color:#761c19;height: 2px; margin-top: 10px"></div>
+                </div>
+            </div>
+
+        </div>
+        <br>
+        <div class="col-sm-10 main-body container-fluid">
+
+            {% block main-body %}
+
+
+            {% endblock %}
+        </div>
+    </div>
+    <div class="row col-sm-12">
+        {% block body-bottom %}
+        {% endblock %}
+
+    </div>
+</div>
+
+
+<footer class="footer">
+
+</footer>
 
 </body>
-<script src="//unpkg.com/navigo@6"></script>
+
 <script type="text/javascript" src="{% static 'main/js/jquery-3.3.1.js' %}"></script>
 <script type="text/javascript" src="{% static 'main/js/bootstrap.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'main/js/highcharts.js' %}"></script>
 <script type="text/javascript" src="{% static 'main/js/main.js' %}"></script>
 <script type="text/javascript" src="{% static 'main/pnotify/pnotify.custom.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'main/pnotify/custome.js' %}"></script>
+<script type="text/javascript" src="{% static 'main/js/chosen.jquery.js' %}"></script>
+<script type="text/javascript" src="{% static 'main/js/ace.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'main/js/ace-elements.min.js' %}"></script>
+
+<script>
+
+    $(function () {
+        $('.chosen-select').chosen();
+        $('.chosen-select-deselect').chosen({allow_single_deselect: true});
+    });
+
+</script>
 {% block Javascript %}
 {% endblock %}
 </html>
