--- a/main/templates/famers_dashboard.html
+++ b/main/templates/famers_dashboard.html
@@ -1,41 +1,52 @@
-<div class="col-sm-8 left-container">
-                            <div class="graphs" id="graph">
-                            <div class="row">
-                                <div class="col-sm-12"><h3>Farmers Home</h3></div>
+{% extends 'base.html' %}
+{% load staticfiles %}
+<head>
 
-                            </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-4 right-container">
-                            <div id="aside">
-                                <div class="row">
-                                    <div class="col-sm-12 text-center"><h3>Climatic Stats</h3></div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-sm-6">April May Rains</div>
-                                    <div class="col-sm-6">122mm</div><br>
-                                    <div class="col-sm-6">May June  Rains</div>
-                                    <div class="col-sm-6">122mm</div><br>
-                                    <div class="col-sm-6">July August Rains</div>
-                                    <div class="col-sm-6">122mm</div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-sm-12 text-center" id="title">Estimated Crop Yield</div>
+    <title>{% block title %}foreCas{% endblock %}</title>
 
-                                    <div class="col-sm-12">
-                                        <div class="row">
-                                            <div class="col-sm-6 text-info center">Maize: </div>
-                                        <div class="col-sm-6 text-justify"></div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-sm-6 text-info center">Maize: </div>
-                                        <div class="col-sm-6 text-justify"></div>
-                                        </div>
-                                   </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-sm-12">Prediction By Regions</div>
 
-                                </div>
-                            </div>
-                        </div>
+</head>
+{% block main-body %}
+    <div class="row" style="width: 100%; height: 30px; padding: 4px 10px; background-color: #9d9d9d">
+
+    </div>
+    <div class="row">
+        <div class="col-sm-6 text-center"><h3>Farm Stats</h3></div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6">April May Rains</div>
+        <div class="col-sm-6">122mm</div>
+        <br>
+        <div class="col-sm-6">May June Rains</div>
+        <div class="col-sm-6">122mm</div>
+        <br>
+        <div class="col-sm-6">July August Rains</div>
+        <div class="col-sm-6">122mm</div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12 text-center" id="title">Estimated Crop Yield</div>
+
+        <div class="col-sm-12">
+            <div class="row">
+                <div class="col-sm-6 text-info center">Maize:</div>
+                <div class="col-sm-6 text-justify"></div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 text-info center">Maize:</div>
+                <div class="col-sm-6 text-justify"></div>
+            </div>
+        </div>
+    </div>
+
+
+{% endblock %}
+{% block body-bottom %}
+    <div></div>
+{% endblock %}
+
+{% block Javascript %}
+
+{% endblock %}
+
+
+
