--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -2,270 +2,139 @@
 {% load staticfiles %}
 <head>
 
-    <title>{% block title %}Home{% endblock %}</title>
+    <title>{% block title %}foreCas{% endblock %}</title>
 
 
 </head>
-{% block body %}
-    <div id="navbar" class="navbar navbar-default    navbar-collapse  h-navbar ace-save-state"
-         style="background:#417690">
-        <div class="navbar-container ace-save-state" id="navbar-container">
 
-            <div class="navbar-header pull-left">
+{% block main-body %}
 
+    <div class="header container-fluid">
+        <div class="row">
+            <div class="col-sm-6"><h4>Grain Yield Prediction and Advisory</h4></div>
+        </div>
+        <div class="col-sm-6">
 
+        </div>
 
-            </div>
-
-            <div class="navbar-buttons navbar-header pull-right  " role="navigation">
-                <ul class="nav ace-nav" style="">
-                    <li class="light-blue dropdown-modal user-min">
-                        <a data-toggle="dropdown" href="#" class="dropdown-toggle">
-                            <img class="nav-user-photo" src="{% static 'main/images/user.jpg' %}" alt="User's  Photo">
-                            <span class="user-info">
-                                                                <small></small>
-                                                                                                                        </span>
-                            <i class="ace-icon fa fa-caret-down" style="color: #fff;"></i>
-                        </a>
-
-                        <ul class="user-menu dropdown-menu-right dropdown-menu dropdown-yellow dropdown-caret dropdown-close">
-                            {% if request.user.is_authenticated %}
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-user"></i>
-                                        Welcome Admin
-                                    </a>
-                                </li>
-                                 <li class="divider"></li>
-                                <li>
-                                    <a href="{% url 'password_change' %}">
-                                        <i class="fa fa-cog"></i>
-                                        Change Password
-                                    </a>
-                                </li>
-
-                                <li class="divider"></li>
-
-                                <li>
-                                    <a href="{% url 'logout' %}" target="_self">
-                                        <i class=" fa fa-power-off"></i>
-                                        Logout
-                                    </a>
-                                </li>
-                            {% else %}
-                                <li>
-                                    <a href="{% url 'login' %}">
-                                        <i class=" glyphicon glyphicon-arrow-down"></i>
-                                        Login
-                                    </a>
-                                </li>
-
-                                <li class="divider"></li>
-
-                                <li>
-                                    <a href="{% url 'register' %}" target="_self">
-                                        <i class="   glyphicon glyphicon-user"></i>
-                                        Signup
-                                    </a>
-                                </li>
-                            {% endif %}
-
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-
-
-        </div><!-- /.navbar-container -->
     </div>
-    {% if messages %}
-        <div class="container-fluid mt-3">
-            {% include 'bootstrap3/messages.html' %}
-        </div>
-    {% endif %}
-    <nav class="navbar visible-xs">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand web-name" href="/">ForeCast</a>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="/"><span class="glyphicon glyphicon-dashboard"></span>&nbsp;&nbsp;Dashboard</a>
-                    </li>
-                    <li><a href="#" onclick="ChangeContent(1)"><span class="glyphicon glyphicon-stats"></span>
-                        Production Stats</a></li>
-                    <li><a href="#" onclick="ChangeContent(2)"><span class="glyphicon glyphicon-grain"></span> Farmer
-                        Dashboard</a></li>
-                    <li><a href="#" onclick="ChangeContent(3)"><span class="glyphicon glyphicon-signal"></span> Advisory
-                        Panel</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <div class="container-fluid" id="main-body">
-        <div class="main-body row"></div>
-        <div class="row content main-row">
-            <div class="col-sm-3  sidenav hidden-xs" id="menu">
-                <div class="row">
-                    <div class="col-sm-12 navigation">
-                        <h2 class="web-name">ForeCast</h2>
-                        <ul class="nav nav-pills nav-stacked">
-                            <li class="active" id="active"><a href="/"><span class="glyphicon glyphicon-dashboard"></span>&nbsp;&nbsp;&nbsp;Dashboard</a>
-                            </li>
-                            <li><a href="#" onclick="ChangeContent(1)"><span class="glyphicon glyphicon-stats"></span>
-                                Production Statistics</a></li>
-                            <li><a href="#" onclick="ChangeContent(2)"><span class="glyphicon glyphicon-grain"></span>
-                                Farmer
-                                Dashboard</a></li>
-                            <li><a href="#" onclick="ChangeContent(3)"><span class="glyphicon glyphicon-signal"></span>
-                                Advisory
-                                Panel</a></li>
-                        </ul>
-                        <br>
+    <div class="main">
+        <div class="row mid">
+            <div class="col-sm-6 left-container">
+                <div class="row" style="margin-top:15px; padding: 8px 20px;">
+                    <div class="col-sm-6 text-right" style="padding-top: 8px;">
+                        <label>
+                            Choose Crop
+                        </label>
                     </div>
+                    <div class="col-sm-6">
+                        <select data-placeholder="Choose Crop" class="chosen-select" id="crop-selector"
+                                tabindex="7">
+                            <option value=""></option>
+                            <option value="maize">Maize Crop</option>
+                            <option value="wheat">Wheat Crop</option>
 
-                    <div class="col-sm-12 weather-starts">
-                         <div class="col-sm-12" style="color:#761c19;height: 2px; margin-top: 10px"></div>
+
+                        </select>
+
                     </div>
                 </div>
-
             </div>
-            <br>
-            <div class="col-sm-9 main-body container-fluid">
-                <div class="header container-fluid">
-                    <h4>Grain Yield Prediction Advisory</h4>
+
+            <div class="col-sm-6 right-container">
+                <div id="aside">
+                    <div id="temp" style="height: 300px">
+                    </div>
+
+                    <div class="row divider-container">
+                        <div id="divider"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12 text-center" id="title">
+                            <span>Rainfall Trend of the  region</span></div>
+                    </div>
+
 
                 </div>
-                <div class="main">
-                    <div class="row mid">
-                        <div class="col-sm-8 left-container">
-                            <div class="graphs" id="graph">
-                            </div>
-                        </div>
-                        <div class="col-sm-4 right-container">
-                            <div id="aside">
-                                <div class="row">
-                                    <div class="col-sm-12 text-center"><h3>Climatic Stats</h3></div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-sm-6">April May Rains</div>
-                                    <div class="col-sm-6">122mm</div><br>
-                                    <div class="col-sm-6">May June  Rains</div>
-                                    <div class="col-sm-6">122mm</div><br>
-                                    <div class="col-sm-6">July August Rains</div>
-                                    <div class="col-sm-6">122mm</div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-sm-12 text-center" id="title">Estimated Crop Yield</div>
-                                </div>
-                                        <div class="row prediction">
-                                            <div class="col-sm-5 text-info center">Wheat: </div><div class="col-sm-3 ">15Bag</div><div class="col-sm-4">Per Ha</div>
-                                        </div>
-                                        <div class="row prediction">
-                                            <div class="col-sm-5 text-info center">Maize: </div><div class="col-sm-3 ">15Bag</div><div class="col-sm-4">Per Ha</div>
-                                        </div>
-                                <div class="row">
-                                    <div class="col-sm-12">Productions By Regions</div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                 </div>
-
             </div>
         </div>
-    <div class="foote row">
-
     </div>
-    </div>
-
-
-
 {% endblock %}
 {% block Javascript %}
-  <script type="text/javascript">
-                  {% comment %}  $.ajax({
-                  url: "{% url 'location' %}",
-                  type: 'GET' ,
-                  success: function (json) {
+    <script type="text/javascript">
+        {% comment %}  $.ajax({
+        url: "{% url 'location' %}",
+        type: 'GET' ,
+        success: function (json) {
 
-                  }
-                });{% endcomment %}
+        }
+      });{% endcomment %}
 
-        Highcharts.chart('graph', {
-            chart: {
-                type: 'column',
-                tribute:false
-            },
-            title: {
-                text: 'Historical maize yield for the past'
-            },
-            xAxis: {
-                categories: [{% for years in years %}'{{ years }}',{% endfor %}]
+        $('#crop-selector').on('change', function () {
+            var crop_name = this.value;
+            $.ajax({
+                url: "getData",
+                type: 'POST',
+                data: {'crop_name': crop_name, 'csrfmiddlewaretoken': '{{ csrf_token }}'},
+                success: function (data) {
+                    alert(data.result);
 
-            },
-
-            yAxis: {
-                title: {
-                    text: 'Crop yield in Bags Per Ha'
                 }
-            },
 
-            series: [{
-                name: 'Maize',
-                data: [{% for maize in maize %}{{ maize }}, {% endfor %}]
-            }, {
-                name: 'Wheat',
-                data: [{% for wheat in wheat %}
-                    {{ wheat }},
-                {% endfor %}
-                ]
-            }]
+            });
         });
 
-        function ChangeContent(id) {
-            $.ajax({
-                type: "POST",
-                url: '/content',
-                data: {'id': id, 'csrfmiddlewaretoken': '{{ csrf_token }}'},
-                success: function (data) {
-                    $('.row.mid').html(data);
-                    console.log(data)
+
+        {% comment %}  $(function () {
+              {% if user.is_authenticated %}
+                  alert("Helooo ")
+
+                  {% else %}
+                  alert("Not uthenticated")
+              {% endif %}
+          }){% endcomment %}
+
+
+        Highcharts.chart('temp', {
+
+            title: {
+                text: 'Tempearture Of the Region For one Year',
+
+                style: {
+                    color: '#FF00FF',
+                    fontWeight: 'bold'
+
                 }
-            });
+            },
 
-        }
-
-        function LoadFamer() {
-            $.ajax({
-                type: "POST",
-                url: '/farmer',
-                data: {'csrfmiddlewaretoken': '{{ csrf_token }}'},
-                success: function (data) {
-                    $('.row.mid').html(data);
-                    console.log(data)
-                    alert(data)
+            xAxis: {
+                categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
+                title: {
+                    text: 'Months'
+                    //align: 'center'
                 }
-            });
+            },
 
-        }
-      {% comment %}  $(function () {
-            {% if user.is_authenticated %}
-                alert("Helooo ")
+            series: [
+                {
+                    name: 'maxTemp',
+                    data: [{% for maxTemp in maxTemp %}{{ maxTemp }}, {% endfor %}]
 
-                {% else %}
-                alert("Not uthenticated")
-            {% endif %}
-        }){% endcomment %}
+                },
+                {
+                    name: 'avgTemp',
+                    data: [{% for avgTemp in avgTemp %}{{ avgTemp }}, {% endfor %}]
 
+                },
+                {
+                    name: 'minTemp',
+                    data: [{% for minTemp in minTemp %}{{ minTemp }}, {% endfor %}]
 
+                }
 
+            ]
+        });
     </script>
+
+
 {% endblock %}
