--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -15,8 +15,7 @@
                 <div id="loginbox" style="margin-top:25px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
                     <div class="panel panel-info">
                         <div class="panel-heading">
-                            <div class="panel-title">Sign In</div>
-                            <div style="float:right; font-size: 80%; position: relative; top:-10px"><a href="{% url 'password_reset' %}">Forgot password?</a></div>
+                            <div class="panel-title">Sign up</div>
                         </div>
                         <div style="padding-top:5px" class="panel-body">
                             <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
