--- a/main/templates/createFarm.html
+++ b/main/templates/createFarm.html
@@ -38,16 +38,16 @@
                                     </div>
                                 </div>
 
-                                <div class="form-group">
-                                    <div class="col-md-12 control">
-                                        <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%">
-                                             Have an account!
-                                            <a href="{% url 'login' %}" >
-                                                Login Here
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
+{#                                <div class="form-group">#}
+{#                                    <div class="col-md-12 control">#}
+{#                                        <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%">#}
+{#                                             Have an account!#}
+{#                                            <a href="{% url 'login' %}" >#}
+{#                                                Login Here#}
+{#                                            </a>#}
+{#                                        </div>#}
+{#                                    </div>#}
+{#                                </div>#}
                             </form>
                         </div>
                     </div>
