--- a/main/templates/famers_dashboard.html
+++ b/main/templates/famers_dashboard.html
@@ -10,157 +10,217 @@
     <div class="row">
         <div class="col-sm-12 container">
             <div class="col-sm-6">
-                <nav class="navbar navbar-inverse">
+                <nav class="navbar navbar-inverse" style="margin-top: 4px; padding-bottom: 15px; padding-left: 10px;">
                     <div class="container-fluid">
                         <div class="navbar-header">
                             <a class="navbar-brand" href="#">{{ request.user.username }}</a>
                         </div>
                         <ul class="nav navbar-nav">
                             <li><a href="{% url 'add_farm' %}"><i class="fa fa-plus"></i>Add Farm</a></li>
-                            <li><a href="{% url 'add_expense' %}"><i class="fa fa-plus"></i>New Expense</a></li>
+{#                            <li><a href="{% url 'add_expense' %}"><i class="fa fa-plus"></i>New Expense</a></li>#}
                             <li><a href="{% url 'add_production' %}"><i class="fa fa-plus"></i>Farm Produce</a></li>
                         </ul>
                     </div>
                 </nav>
             </div>
-            <div class="col-sm-6">
-                <div class="col-sm-12 container">
-
-                </div>
+            <div class="col-sm-6 text-center alert alert-success"
+                 style=" padding-top: 22px; padding-bottom: 16px; margin-top: 4px">
+                <span style="  font-size: 22px;">Registered Farms Information</span>
             </div>
         </div>
     </div>
     <div class="col-sm-6">
         <div class="row">
-            <div class="col-sm-12 text-left"></div>
+            <div class="col-sm-12 text-left">
+
+            </div>
         </div>
         <div id="chart"></div>
     </div>
-    <div class="col-sm-6">
-        <table data-page-length='4' id="farmsP" class="table table-striped table-bordered" style="width:100%">
+    <div class="col-sm-6" style=" padding-top: 10px">
+        <table data-page-length='4' id="farmsP" class="table table-striped table-bordered" style="width:100%;">
             <thead>
             <tr>
                 <th>Name</th>
-                <th>Position</th>
-                <th>Office</th>
-                <th>Age</th>
-                <th>Start date</th>
-                <th>Salary</th>
+                <th>Crop Type</th>
+                <th>Location</th>
+                <th>Size(Acres)</th>
+
             </tr>
             </thead>
             <tbody>
-            <tr>
-                <td>Tiger Nixon</td>
-                <td>System Architect</td>
-                <td>Edinburgh</td>
-                <td>61</td>
-                <td>2011/04/25</td>
-                <td>$320,800</td>
-            </tr>
-            <tr>
-                <td>Garrett Winters</td>
-                <td>Accountant</td>
-                <td>Tokyo</td>
-                <td>63</td>
-                <td>2011/07/25</td>
-                <td>$170,750</td>
-            </tr>
-            <tr>
-                <td>Ashton Cox</td>
-                <td>Junior Technical Author</td>
-                <td>San Francisco</td>
-                <td>66</td>
-                <td>2009/01/12</td>
-                <td>$86,000</td>
-            </tr>
+            {% for AllFarms in AllFarms %}
+                <tr>
+                    <td>{{ AllFarms.name }}</td>
+                    <td>{{ AllFarms.type }}</td>
+                    <td>{{ AllFarms.location }}</td>
+                    <td>{{ AllFarms.size }}</td>
 
-
+                </tr>
+            {% endfor %}
             </tbody>
         </table>
 
 
     </div>
 
-    </div>
 {% endblock %}
 {% block body-bottom %}
     <div class="row" style="width: 100%; height: 300px; background-image: url('{% static 'main/images/b2.jpg' %}')">
+        <div class="col-sm-6 text-center">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <b>Farm Productions Stats</b>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-sm-3"></div>
+                            <div class="col-sm-6">
+                                <select data-placeholder="Choose Crop" class="chosen-select col-sm-6" id="farm-selector"
+                                    tabindex="7">
+                                <option value=""></option>
+                                {% for farms in AllFarms %}
+                                    <option value="{{ farms.id }}">{{ farms.name }}</option>
+                                {% endfor %}
+                            </select>
+                            </div>
+                            <div class="col-sm-3"></div>
+
+                        </div>
+
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="col-sm-6 text-center">
+            <div class=" panel panel-primary">
+                <div class="panel-heading">Farm Name Previous Productions</div>
+                <div class="panel body">
+                    <div id="farm-productions" style=" height: 250px">
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
 
     </div>
+    </div>
+
 {% endblock %}
 
 {% block Javascript %}
     <script>
         $(function () {
-            $('#farmsP').DataTable({
+            $('#farmsP').DataTable({});
+        });
 
-            });
+
+        Highcharts.chart('chart', {
+            chart: {
+                plotBackgroundColor: null,
+                plotBorderWidth: null,
+                plotShadow: false,
+                type: 'pie'
+            },
+            title: {
+                text: 'Farm Under Cultivation, 2018'
+            },
+            tooltip: {
+                pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
+            },
+            plotOptions: {
+                pie: {
+                    allowPointSelect: true,
+                    cursor: 'pointer',
+                    dataLabels: {
+                        enabled: true,
+                        format: '<b>{point.name}</b>: {point.percentage:.1f} %',
+                        style: {
+                            color: (Highcharts.theme && Highcharts.theme.contrastTextColor) || 'black'
+                        }
+                    }
+                }
+            },
+            series: [{
+                name: 'Brands',
+                colorByPoint: true,
+                data: [{
+                    name: 'Maize',
+                    y: {{ maizeTotal }},
+                },
+                    {
+                        name: 'Wheat',
+                        y:{{ wheatTotal }}
+                    }]
+            }]
         });
 
 
 
+        $('#farm-selector').on('change', function () {
+            var farm_id = this.value;
+            $.ajax({
+                url: "getFarmProductions",
+                type: 'POST',
+                data: {'farm_id': farm_id, 'csrfmiddlewaretoken': '{{ csrf_token }}'},
+                success: function (data) {
+                    console.log(data);
 
-        Highcharts.chart('chart', {
-  chart: {
-    plotBackgroundColor: null,
-    plotBorderWidth: null,
-    plotShadow: false,
-    type: 'pie'
-  },
-  title: {
-    text: 'Browser market shares in January, 2018'
-  },
-  tooltip: {
-    pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
-  },
-  plotOptions: {
-    pie: {
-      allowPointSelect: true,
-      cursor: 'pointer',
-      dataLabels: {
-        enabled: true,
-        format: '<b>{point.name}</b>: {point.percentage:.1f} %',
-        style: {
-          color: (Highcharts.theme && Highcharts.theme.contrastTextColor) || 'black'
-        }
-      }
-    }
-  },
-  series: [{
-    name: 'Brands',
-    colorByPoint: true,
-    data: [{
-      name: 'Chrome',
-      y: 61.41,
-      sliced: true,
-      selected: true
-    }, {
-      name: 'Internet Explorer',
-      y: 11.84
-    }, {
-      name: 'Firefox',
-      y: 10.85
-    }, {
-      name: 'Edge',
-      y: 4.67
-    }, {
-      name: 'Safari',
-      y: 4.18
-    }, {
-      name: 'Sogou Explorer',
-      y: 1.64
-    }, {
-      name: 'Opera',
-      y: 1.6
-    }, {
-      name: 'QQ',
-      y: 1.2
-    }, {
-      name: 'Other',
-      y: 2.61
-    }]
-  }]
-});
+
+                    var series = [];
+                    for (i = 0; i < data.length; i++) {
+                        series.push([data[i].key, data[i].value]);
+                    }
+                    console.log(data.prod);
+                    console.log(data.years);
+
+                    Highcharts.chart('farm-productions', {
+                        chart: {
+                            type: 'column'
+                        },
+                        title: {
+                            text: 'Historical Productions'
+                        },
+                        subtitle: {
+                            text: 'Source: Grain ForeCas'
+                        },
+                        xAxis: {
+                            categories: data.years,
+                            crosshair: true
+                        },
+                        yAxis: {
+                            min: 0,
+                            title: {
+                                text: 'Productions  in Bags'
+                            }
+                        },
+                        tooltip: {
+                            headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
+                            pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' +
+                            '<td style="padding:0"><b>{point.y:.1f} bags</b></td></tr>',
+                            footerFormat: '</table>',
+                            shared: true,
+                            useHTML: true
+                        },
+                        plotOptions: {
+                            column: {
+                                pointPadding: 0.2,
+                                borderWidth: 0
+                            }
+                        },
+                        series: [{
+                            name: 'Season',
+                            data: data.prod
+
+                        }]
+                    });
+
+                }
+
+            });
+        });
     </script>
 
 
